--- a/udemy.css
+++ b/udemy.css
@@ -47,6 +47,25 @@ body{
     align-items: center;
 }
 
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;   
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup{
+    display: block;
+}
+
 .categories{
     display: flex;
     flex-direction: row;
@@ -67,6 +86,21 @@ button{
 button:hover{
     background-color: white;
     color: black;
+}
+
+.sale-image{
+    position: relative;
+}
+
+.sale-image__offer{
+    background-color: white;
+    color: black;
+    border: solid 1px;
+    margin-left: 20px;
+    padding: 10px;
+    position: absolute;
+    top: 150px;
+    left: 100px;
 }
 
 .sale-image img{
