--- a/udemy.css
+++ b/udemy.css
@@ -52,6 +52,7 @@ body{
     align-items: center;
 }
 
+/* mylearning popup */
 .mylearning{
     position: relative;
     cursor: pointer;
@@ -76,6 +77,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
     border-bottom: solid black 1px;
+    cursor: pointer;
 }
 
 button{
@@ -86,12 +88,41 @@ button{
     border: 30px;
     border-radius: 30px;
     justify-content: space-around;
+    cursor: pointer;
+    border: solid purple 1px;
 }
 
 button:hover{
-    background-color: white;
-    color: black;
+    background-color: transparent;
+    transition: 1s;
+    background-color: transparent;
+    color: red;
+    border: solid purple 1px;
 }
+
+.carousel{
+    position: relative;
+}
+
+.carousel__1{
+    width: 50px;
+    position: absolute;
+    top: 130px;
+    left: 250px;
+}
+
+.carousel__2{
+    width: 50px;
+    position: absolute;
+    top: 130px;
+    right: 250px;
+} 
+
+.carousel__text{
+    padding-top: 60px;
+    text-align: center;
+}
+
 
 .sale-image{
     position: relative;
@@ -106,11 +137,28 @@ button:hover{
     position: absolute;
     top: 150px;
     left: 100px;
+    animation-name: zoom;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;  
+    /* animation fill mode defines that it works based on last animation */
+    opacity: 0;
 }
 
+@keyframes zoom {
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
 .sale-image img{
     width: 100%;
 }
+
 
 .course{
     padding: 10px;
